# cookiecutter-basicpythonproject

./: cookiecutter.json
{{cookiecutter.module_name}}/: venv.sh
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/: main.py  utils.py
